k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
spec:
  selector:
    app: chat-backend
  ports:
    - port: 8080
      targetPort: 8080
